# redis-om-python-issue

./: .gitignore  README.md  pyproject.toml
test_redis_om/: Customer.py  __init__.py  app.py
